--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h3>
 
-<p><ahref="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">pMy Google Scholar Profile</a></p>
+<p><a href="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">My Google Scholar Profile</a></p>
 
 <p>My CV</p>
 
