--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
       <h3>
 <a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h3>
 
+This page contains a few important links, and some descriptions of current projects.
+
+<p><a href="<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">My University Home Page</a></p>
+">My Google Scholar Profile</a></p>
+
 <p><a href="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">My Google Scholar Profile</a></p>
 
-<p>My CV</p>
+<p><a href="https://github.com/ggloor/cv/blob/master/CV_Gloor.pdf">My CV</a></p>
 
       <footer class="site-footer">
 
