--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 This page contains a few important links, and some descriptions of current projects.
 
-<p><a href="<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">My University Home Page</a></p>
+<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">My University Home Page</a></p>
 
 <p><a href="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">My Google Scholar Profile</a></p>
 
