--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ This page contains a few important links, and some descriptions of current proje
 
 <p><a href="https://github.com/ggloor/cv/blob/master/CV_Gloor.pdf">CV</a></p>
 
-
-Github repositories:
+<div>
+<h3>Github repositories:</h3>
 <p><a href="https://github.com/ggloor/compositions">Compositions</a></p>
 
 
-Bioconductor repositories:
+<h3>Bioconductor repositories:</h3>
 <p><a href="https://bioconductor.org/packages/release/bioc/html/ALDEx2.html">ALDEx2</a></p>
       <footer class="site-footer">
 
