--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ This page contains a few important links, and some descriptions of current proje
 <div>
 <h3>Github repositories:</h3>
 <p><a href="https://github.com/ggloor/compositions">Compositions</a></p>
-
+<p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
 
 <h3>Bioconductor repositories:</h3>
 <p><a href="https://bioconductor.org/packages/release/bioc/html/ALDEx2.html">ALDEx2</a></p>
