--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
           <h3>
 <a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h3>
 
-<p>My Google Scholar Profile</p>
 
-<p>My CV</p>
+This page contains a few important links, and some descriptions of current projects.
+
+<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">Home Page</a></p>
+
+<p><a href="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">Google Scholar Profile</a></p>
+
+<p><a href="https://github.com/ggloor/cv/blob/master/CV_Gloor.pdf">CV</a></p>
+
+<div>
+<h3>Github repositories:</h3>
+<p><a href="https://github.com/ggloor/compositions">Compositions</a></p>
+<p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
+
+<h3>Bioconductor repositories:</h3>
+<p><a href="https://bioconductor.org/packages/release/bioc/html/ALDEx2.html">ALDEx2</a></p>
         </section>
 
         <aside id="sidebar">
@@ -44,6 +57,6 @@
       </div>
     </div>
 
-  
+
   </body>
 </html>
