--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Ggloor.GitHub.io by ggloor</title>
+    <title>ggloor.github.io by ggloor</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Ggloor.GitHub.io</h1>
+        <h1>ggloor.github.io</h1>
         <h2>home page and cv</h2>
         <a href="https://github.com/ggloor" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -32,7 +32,7 @@
 <a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h3>
 
 
-This page contains a few important links, and some descriptions of current projects.
+<p>This page contains a few important links, and some descriptions of current projects. First the preliminaries:</p>
 
 <p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">Home Page</a></p>
 
@@ -40,12 +40,15 @@ This page contains a few important links, and some descriptions of current proje
 
 <p><a href="https://github.com/ggloor/cv/blob/master/CV_Gloor.pdf">CV</a></p>
 
-<div>
-<h3>Github repositories:</h3>
+<h3>Scripts, software, stuff:</h3>
+
+<h4>Github repositories:</h4>
+
 <p><a href="https://github.com/ggloor/compositions">Compositions</a></p>
 <p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
 
-<h3>Bioconductor repositories:</h3>
+<h4>Bioconductor repositories:</h4>
+
 <p><a href="https://bioconductor.org/packages/release/bioc/html/ALDEx2.html">ALDEx2</a></p>
         </section>
 
