--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h3>
+          <h2>
+<a id="greg-gloor-phd" class="anchor" href="#greg-gloor-phd" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Greg Gloor, PhD</h2>
 
 
 <p>This page contains a few important links, and some descriptions of current projects. First the preliminaries:</p>
@@ -44,7 +44,7 @@
 
 <h4>Github repositories:</h4>
 
-<p><a href="https://github.com/ggloor/compositions">Compositions</a></p>
+<p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a></p>
 <p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
 
 <h4>Bioconductor repositories:</h4>
