--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@ I have a broad experience in both wet-lab and computational biology.
 <h4>Github repositories:</h4>
 
 <p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a></p>
+
+High throughput sequencing data is compositional by default, and should be analyzed as such. This site contains presentations and worked examples.
+
 <p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
+
+We developed combinatorial barcodes for sequencing on the Illumina platforms. This site contains protocols and software.
 
 <h4>Bioconductor repositories:</h4>
 
