--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I have a broad experience in both wet-lab and computational biology.
 High throughput sequencing data is compositional by default, and should be analyzed as such. This site contains presentations and worked examples.
 <p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a></p>
 
-
+<p><a href="https://github.com/ggloor/CoDaSeq">R functions for compositional analysis of high throughput sequencing</a></p>
 We developed combinatorial barcodes for sequencing on the Illumina platforms. This site contains protocols and software.
 <p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
 
