--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@ I have a broad experience in both wet-lab and computational biology.
 
 
 High throughput sequencing data is compositional by default, and should be analyzed as such. This site contains presentations and worked examples.
-<p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a></p>
+<p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a> </p>
+<ul>
+	<li><a href="https://github.com/ggloor/compositions/background_reading/Reading_List.md">A list of useful readings</a></li>
+</ul>
+
 
 <p><a href="https://github.com/ggloor/CoDaSeq">R functions for compositional analysis of high throughput sequencing</a></p>
 We developed combinatorial barcodes for sequencing on the Illumina platforms. This site contains protocols and software.
