--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ High throughput sequencing data is compositional by default, and should be analy
 <p><a href="https://github.com/ggloor/compositions">Information on using compositional data analysis on high throughput sequencing.</a> </p>
 <ul>
 	<li><a href="https://github.com/ggloor/compositions/blob/master/background_reading/Reading_List.md">A list of useful readings</a></li>
+	<li><a href="https://github.com/ggloor/compositions/tree/master/presentations">A recent set of presentations</a></li>
 </ul>
 
 
