added link to tutorial

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
 <p>This page contains a few important links, and some descriptions of current projects. First the preliminaries:</p>
 
-<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">Home Page</a></p>
-
 <p><a href="https://scholar.google.ca/citations?user=909NxQEAAAAJ&hl=en&oi=ao">Google Scholar Profile</a></p>
 
 <p><a href="https://github.com/ggloor/cv/blob/master/CV_Gloor.pdf">CV</a></p>
+
+<p><a href="http://www.academicbiography.uwo.ca/profile.php?&n=ggloor">Home Page</a></p>
 
 I have a broad experience in both wet-lab and computational biology.
 
@@ -52,6 +52,7 @@ High throughput sequencing data is compositional by default, and should be analy
 <ul>
 	<li><a href="https://github.com/ggloor/compositions/blob/master/background_reading/Reading_List.md">A list of useful readings</a></li>
 	<li><a href="https://github.com/ggloor/compositions/tree/master/presentations">A recent set of presentations</a></li>
+	<li><a href="https://github.com/ggloor/CoDa_microbiome_tutorial/wiki">A tutorial on CoDa analysis of the microbiome</a></li>
 </ul>
 
 
