--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ High throughput sequencing data is compositional by default, and should be analy
 </ul>
 
 
-<p><a href="https://github.com/ggloor/CoDaSeq">R functions for compositional analysis of high throughput sequencing</a></p>
+<p><a href="https://github.com/ggloor/CoDaSeq">CoDaSeq: R functions for compositional analysis of high throughput sequencing</a></p>
 We developed combinatorial barcodes for sequencing on the Illumina platforms. This site contains protocols and software.
 <p><a href="https://github.com/ggloor/miseq_bin">Illumina 16S rRNA gene sequencing software</a></p>
 
