--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<h2>In-line barcodes and workflow for 16S rRNA gene sequencing</h2>
 						</header>
 						<p>
-						 We developed an inline combinatorial barcoding system for the Illumina HiSeq and MiSeq platforms. The below repository contains protocols and software. (<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0015406">Gloor et al, 2010;</a>)
+						 We developed an inline combinatorial barcoding system for the Illumina HiSeq and MiSeq platforms. The below repository contains protocols and software. (<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0015406">Gloor et al, 2010</a>)
 						 <ul class="actions">
 						 <li><a href="https://github.com/ggloor/miseq_bin/releases" class="button">Newest Release on Github</a></li>
 					</div>
