--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy; Created by Brandon Lieng and Daniel Giguere | Design: <a href="https://html5up.net">HTML5 UP</a> | Icons designed by Freepik from Flaticon</p>
+			<p class="copyright">&copy; 2017 | Design: <a href="https://html5up.net">HTML5 UP</a> | Icons designed by Freepik from Flaticon</p>
 		</footer>
 
 		<!-- Scripts -->
