--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<hr>
 			<div class="content">
-				<p>I have a broad experience in both wet-lab and computational biology. My lab investigates the functional characterization of complex systems using compositional data analysis methods.
+				<p>I have experience in both wet-lab and computational biology, ranging from bacteriophage molecular biology to Drosophila genetics to genomics and computational biology. We investigate and characterize the functional makeup of complex systems using high-throughput sequencing. We are trying to alter the perception that sequencing is counting. We want experimentalists to understand that sequencing is a probabilistic sample of the underlying environment, and that these data can be manipulated using the methods developed for compositional data analysis.
 
 				This page contains a few important links, and some descriptions of current projects.
 				<br><hr><br>
